assets/css/settings-styles.css
span.wpo-warning {
	display: inline-block;
	border: 1px solid red;
	border-left: 4px solid red;
	padding: 5px 15px;
	background-color: white;
}
.wcpdf-extensions-ad {
	position: relative;
	min-height: 90px;
	border: 1px solid #3D5C99;
	background-color: #EBF5FF;
	padding: 15px;
	padding-left: 100px;
	margin-top: 15px;
}

img.wpo-helper {
	position: absolute;
	bottom: 0px;
	left: 3px;
}

.wcpdf-extensions-ad h3 {
	margin: 0;
}

.wcpdf-extensions-ad ul {
	margin: 0;
	margin-left: 1.5em;
}

.wcpdf-extensions li {
	margin: 0;
}

.wcpdf-extensions li ul {
	list-style-type: square;
	margin-top: 0.5em;
	margin-bottom: 0.5em;
}

.wcpdf-extensions > li:before { 
	content: "";
	border-color: transparent transparent transparent #111;
	border-style: solid;
	border-width: 0.35em 0.35em 0.35em 0.45em;
	display: block;
	height: 0;
	width: 0;
	left: -1em;
	top: 0.9em;
	position: relative;
}

.wcpdf-extensions li:not(.expanded) {
	cursor:pointer;
}

.wcpdf-extensions .expanded:before {
	border-color: #111 transparent transparent transparent;
	left: -1.17em;
	border-width: 0.45em 0.45em 0.35em 0.35em !important;
}

.wcpdf-extensions .more {
	padding: 10px;
	background-color: white;
	border: 1px solid #ccc;
	border-radius: 5px;
}

.wcpdf-extensions table td {
	vertical-align: top;
}

.dropbox-logo {
	margin-bottom: -10px;
	margin-right: 10px;
}
.cloud-logo {
	margin-bottom: -10px;
	margin-top: -5px;
	margin-right: 10px;
}

#img-header_logo {
	max-height: 200px;
	width: auto;
	max-width: 100%;
}

.multiple-text-input label {
	min-width: 120px;
	display: inline-block;
}

table.wcpdf_documents_settings_list {
	width: 100%;
	border-collapse: collapse;
	border-spacing: 0;
	background-color: white;
	border-top: 2px solid black;
}
table.wcpdf_documents_settings_list tr.odd {
	background-color: #EBF5FF;
}

table.wcpdf_documents_settings_list td {
	padding: 5px;
}

table.wcpdf_documents_settings_list a {
	text-decoration: none;
}

table.wcpdf_documents_settings_list td.settings-icon {
	text-align: right;
}

table.wcpdf_documents_settings_list td.title {
	font-weight: bold;
}

.wcpdf_document_settings_sections {
	margin-bottom: 40px;
	position: relative;
}

.wcpdf_document_settings_sections > h2 {
	cursor: pointer;
	padding: 1em 0.8em;
	margin: 0;
	border: 1px solid #eaeaea;
}

.wcpdf_document_settings_sections ul {
	background: white;
	list-style: none;
	margin: 0;
	padding: 0;
	width: 100%;
	display: block;
	height: auto;
	display: none;
	box-sizing: border-box;
	position: absolute;
	border-left: 1px solid #eaeaea;
	border-right: 1px solid #eaeaea;
	z-index: 1000;
	box-shadow: 0 35px 35px -8px rgba(0, 0, 0, 0.1);
	-webkit-box-shadow: 0 35px 35px -8px rgba(0, 0, 0, 0.1);
}

.wcpdf_document_settings_sections ul.active {
	display: block;
}

.wcpdf_document_settings_sections ul li {
	box-sizing: border-box;
	padding: 0;
	margin-bottom: 0;
	border-bottom: 1px solid #eaeaea;
	font-size: 1.1em;
}

.wcpdf_document_settings_sections ul li:hover {
	cursor: pointer;
	background: #51266b;
	color: white;
}

.wcpdf_document_settings_sections ul li:hover a {
	color: white;
}

.wcpdf_document_settings_sections ul li a {
	color: black;
	text-decoration: none;
	padding: 1.2em 1.6em;
	display: block;
}

.wcpdf_document_settings_sections .arrow-down {
	font-size: 0.7em;
	color: #999;
	margin-left: 8px;
	font-weight: normal;
	float: right;
}

.wcpdf_document_settings_sections p:hover,
.wcpdf_document_settings_sections p:hover > .arrow-down { 
	color: #222;
}

.edit-next-number {
	opacity:0.5;
}
.edit-next-number:hover {
	opacity:1;
	cursor:pointer;
}

/* Preview */

body.woocommerce_page_wpo_wcpdf_options_page {
	background: #fff;
}

.wrap [class$="icon32"] + h2 {
	font-size: 18px;
	padding: 1em;
}

.wrap .notice {
	margin: 15px 0 0;
}

.nav-tab-wrapper a.nav-tab {
	background: transparent;
	border: none;
	border-bottom: 3px solid transparent;
	padding: 1em 0em;
	margin: 0 1.2em;
	font-size: 15px;
}

.nav-tab-wrapper a.nav-tab.nav-tab-active {
	border-bottom: 3px solid #51266b;
}

#wpo-wcpdf-preview-wrapper {
	width: 100%;
	height: auto;
	position: relative;
	display: flex;
	align-items: flex-start;
}

#wpo-wcpdf-preview-wrapper .sidebar,
#wpo-wcpdf-preview-wrapper .preview-document {
	transition: .3s ease-in-out;
}

#wpo-wcpdf-preview-wrapper .sidebar {
	height: auto;
	padding: 4em 0 0 0;
	box-sizing: border-box;
	background: transparent;
	flex: 0 0 35%;
	overflow-x: hidden;
}

#wpo-wcpdf-preview-wrapper .sidebar > form {
	background: white;
	overflow: visible;
	padding: 0;
	margin-left: 2em;
	box-sizing: border-box;
	width: calc(100% - 4em);
	max-width: 50vw;
}

#wpo-wcpdf-preview-wrapper .sidebar > form.editor {
	max-width: none;
}

#wpo-wcpdf-preview-wrapper .sidebar .form-table,
#wpo-wcpdf-preview-wrapper .sidebar .form-table > tr,
#wpo-wcpdf-preview-wrapper .sidebar .form-table > tr > th,
#wpo-wcpdf-preview-wrapper .sidebar .form-table > tr > td,
#wpo-wcpdf-preview-wrapper .sidebar .form-table > tbody,
#wpo-wcpdf-preview-wrapper .sidebar .form-table > tbody > tr,
#wpo-wcpdf-preview-wrapper .sidebar .form-table > tbody > tr > th,
#wpo-wcpdf-preview-wrapper .sidebar .form-table > tbody > tr > td {
	display: block;
	width: 100%;
	padding: 0;
}

#wpo-wcpdf-preview-wrapper .sidebar .form-table > tr > th,
#wpo-wcpdf-preview-wrapper .sidebar .form-table > tbody > tr > th {
	padding-bottom: 0.6em;
}

#wpo-wcpdf-preview-wrapper .sidebar .form-table > tr > td,
#wpo-wcpdf-preview-wrapper .sidebar .form-table > tbody > tr > td {
	padding-bottom: 2.4em;
}

#wpo-wcpdf-preview-wrapper .sidebar .form-table > tr > td > p.description,
#wpo-wcpdf-preview-wrapper .sidebar .form-table > tbody > tr > td p.description {
	font-size: 0.85em;
	padding-top: 0.7em;
}
/* ... */

